--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "gatsby": "^2.32.4",
+    "gatsby-background-image": "^1.4.1",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-postcss": "^3.7.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
@@ -28,6 +29,7 @@
     "react-datocms": "^1.5.3",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-slick": "^0.28.0",
     "styled-components": "^5.2.1"
   }
 }
