--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.4",
+    "babel-plugin-styled-components": "^1.12.0",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "gatsby": "^2.32.4",
@@ -24,6 +25,7 @@
     "gatsby-plugin-postcss": "^3.7.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.14.1",
+    "gatsby-plugin-styled-components": "^4.0.0",
     "gatsby-source-datocms": "^2.5.12",
     "react": "^16.13.1",
     "react-datocms": "^1.5.3",
