--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "antd": "^4.13.0",
     "autoprefixer": "^10.2.4",
     "babel-plugin-styled-components": "^1.12.0",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.32.4",
+    "formik": "^2.2.6",
+    "gatsby": "^3.0.0",
     "gatsby-background-image": "^1.4.1",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-antd": "^2.2.0",
     "gatsby-plugin-postcss": "^3.7.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.14.1",
@@ -32,6 +35,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-slick": "^0.28.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "yup": "^0.32.9"
   }
 }
