--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "gatsby": "^3.0.0",
     "gatsby-background-image": "^1.4.1",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-antd": "^2.2.0",
-    "gatsby-plugin-postcss": "^3.7.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-plugin-styled-components": "^4.0.0",
