--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-plugin-styled-components": "^4.0.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-datocms": "^2.5.12",
     "react": "^16.13.1",
     "react-datocms": "^1.5.5",
