--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-plugin-styled-components": "^4.0.0",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-datocms": "^2.5.12",
+    "gsap": "^3.6.1",
     "react": "^16.13.1",
     "react-datocms": "^1.5.5",
     "react-dom": "^16.13.1",
