--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
   },
   "dependencies": {
     "antd": "^4.13.0",
-    "autoprefixer": "^10.2.4",
     "babel-plugin-styled-components": "^1.12.0",
-    "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "formik": "^2.2.6",
     "gatsby": "^3.0.0",
@@ -26,13 +24,13 @@
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-antd": "^2.2.0",
-    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-purgecss": "^6.0.1",
+    "gatsby-plugin-react-helmet": "^4.3.0",
     "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-plugin-styled-components": "^4.0.0",
     "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-datocms": "^2.5.12",
-    "gsap": "^3.6.1",
     "react": "^16.13.1",
     "react-datocms": "^1.5.5",
     "react-dom": "^16.13.1",
