--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^4.13.0",
     "babel-plugin-styled-components": "^1.12.0",
     "dotenv": "^8.2.0",
+    "emailjs-com": "^2.6.4",
     "formik": "^2.2.6",
     "gatsby": "^3.0.0",
     "gatsby-background-image": "^1.4.1",
