--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@loadable/component": "^5.14.1",
     "antd": "^4.13.0",
     "babel-plugin-styled-components": "^1.12.0",
     "dotenv": "^8.2.0",
